Fix future events being vertically aligned

--- a/css/main.scss
+++ b/css/main.scss
@@ -398,6 +398,7 @@ q {font-style: italic;}
   padding-bottom: 10px;
   margin-bottom: 10px;
   display: inline-block;
+  width: 24.9999%;
   padding-left: 5px;
   padding-right: 5px;
   float: none;
